--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled3.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/kFxIRD3CgV7K+3a8cbzk",
+      "authorship_tag": "ABX9TyOcY/yrOT7/HaFQtSnvDDDg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,40 +29,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8xs3igzlOANI",
-        "outputId": "8b5281a1-37b9-4ab7-a032-5e2aa51d178d"
+        "outputId": "d1b03673-fdfd-4f73-8cee-6805044f2afa"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Input your guess number: 8\n",
+            "Input your guess number: 9\n",
             "The guess is too low!\n",
-            "Input your guess number: 15\n",
+            "Input your guess number: 20\n",
             "The guess is too high!\n",
-            "Input your guess number: 12\n",
-            "You got it!\n"
+            "Input your guess number: 16\n",
+            "The guess is too high!\n",
+            "Input your guess number: 13\n",
+            "The guess is too high!\n",
+            "Input your guess number: 11\n",
+            "You got it!\n",
+            "You guessed the following numbers:  [9, 20, 16, 13, 11]\n"
           ]
         }
       ],
       "source": [
         "import random\n",
         "rand_number = random.randrange(1,21,1)\n",
+        "list_of_guesses = []\n",
         "while True:\n",
         "  guess = int(input(\"Input your guess number: \")) ;\n",
+        "  list_of_guesses.append(guess)\n",
         "  if guess > rand_number:\n",
         "    print(\"The guess is too high!\")\n",
         "  elif guess < rand_number:\n",
         "    print(\"The guess is too low!\");\n",
         "  else:\n",
         "    print(\"You got it!\");\n",
-        "    break;"
+        "    break;\n",
+        "print (\"You guessed the following numbers: \", list_of_guesses)"
       ]
     }
   ]
